# LV_DCP

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/agents/: code-reviewer.md  db-expert.md  devops-deployer.md  fastapi-architect.md  system-analyst.md  test-runner.md
.claude/hooks/: post-checkout.sh  post-commit.sh  post-merge.sh  post-rewrite.sh
.github/workflows/: bench-embedder.yml  eval.yml  quality-gates.yml
apps/agent/: __init__.py  config.py  daemon.py  handler.py  obsidian_worker.py  plist.py  wiki_worker.py
apps/cli/: __init__.py  __main__.py  main.py
apps/mcp/: __init__.py  install.py  server.py  tools.py
apps/ui/: __init__.py  main.py
apps/vscode/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
bench/: README.md  pyproject.toml
bench/examples/: queries.yaml
bench/src/devctx_bench/: __init__.py  cli.py  loader.py  report.py  runner.py
bench/tests/: test_smoke.py
deploy/docker-compose/: qdrant.yml
deploy/launchd/: com.lukinvit.lvdcp.breadcrumb-prune.plist.tmpl
docs/: claude-hooks-setup.md  constitution.md  tz.md  user-guide.md
docs/adr/: 001-budgets.md  002-eval-harness.md  003-single-writer-model.md  004-phase-2-pivot.md  005-completeness-invariant.md  006-llm-provider-abstraction.md  007-storage-encryption.md  README.md
docs/deployment/: docker-context.md  ollama-embeddings.md
docs/dogfood/: phase-1.md  phase-2.md  phase-3a.md  phase-3b.md  phase-3c1.md  phase-3c2.md  phase-4.md  phase-5.md  phase-6.md
docs/eval/: 2026-04-12-baseline.md  2026-04-12-multiproject-phase4-final.md  2026-04-12-multiproject-week1.md  2026-04-12-phase4-final.md  2026-04-12-stage1-after.md  2026-04-12-week1-regression.md  2026-04-12-week3-after.md  2026-04-13-multiproject-phase5-calibrated.md  2026-04-13-multiproject-phase5-final.md  2026-04-13-phase5-final.md  2026-04-16-vector-vs-fts-sample-repo.md  2026-04-21-aider-baseline-comparison.md  3c2-failure-analysis.md  README.md  gold-datasets.md  real-project-eval.md
docs/operations/: ci-eval.md  eval.md
docs/release/: 2026-04-13-v0.6.1-stabilization.md  2026-04-23-v0.7.0-symbol-timeline.md  2026-04-23-v0.8.0-project-copilot-wrapper.md  2026-04-24-v0.8.1-async-wiki-refresh.md  2026-04-24-v0.8.10-error-backoff.md  2026-04-24-v0.8.11-recovery-toast.md  2026-04-24-v0.8.12-toast-autodismiss.md  2026-04-24-v0.8.13-toast-a11y.md  2026-04-24-v0.8.14-retry-now.md  2026-04-24-v0.8.15-toast-telemetry.md  2026-04-24-v0.8.16-forced-colors.md  2026-04-24-v0.8.17-pulse-a11y.md  2026-04-24-v0.8.18-progress-a11y.md  2026-04-24-v0.8.19-outage-duration.md  2026-04-24-v0.8.2-wiki-progress-cancel.md  2026-04-24-v0.8.20-java-parser.md  2026-04-24-v0.8.21-kotlin-parser.md  2026-04-24-v0.8.22-swift-parser.md  2026-04-24-v0.8.23-java-inherits.md  2026-04-24-v0.8.24-kotlin-inherits.md  2026-04-24-v0.8.25-swift-inherits.md  2026-04-24-v0.8.26-vscode-marketplace-prep.md  2026-04-24-v0.8.27-vscode-extension-settings.md  2026-04-24-v0.8.28-obsidian-nightly-sync.md  2026-04-24-v0.8.29-obsidian-observability.md  2026-04-24-v0.8.3-check-watch.md  2026-04-24-v0.8.30-vscode-activation.md  2026-04-24-v0.8.31-value-metrics-transient-split.md  2026-04-24-v0.8.32-ctx-registry-ls.md  2026-04-24-v0.8.33-registry-prune.md  2026-04-24-v0.8.34-atomic-config-write.md  2026-04-24-v0.8.35-skip-transient-auto-register.md  2026-04-24-v0.8.4-last-refresh.md  2026-04-24-v0.8.5-log-tail.md  2026-04-24-v0.8.6-mcp-bg-refresh.md  2026-04-24-v0.8.7-dashboard-bg-refresh.md  2026-04-24-v0.8.8-wiki-refresh-htmx.md  2026-04-24-v0.8.9-crash-toast.md  2026-04-25-v0.8.36-prune-missing-roots.md  2026-04-25-v0.8.37-ls-missing.md  (+30 more)
docs/research/: idea-bank.md
docs/runbooks/: timeline-rollout.md
libs/breadcrumbs/: __init__.py  cc_identity.py  models.py  privacy.py  prune.py  reader.py  renderer.py  snapshot.py  store.py  views.py  writer.py
libs/claude_usage/: __init__.py  aggregator.py  cache.py  path_encoding.py  reader.py
libs/context_pack/: __init__.py  builder.py  timeline_enrich.py
libs/copilot/: __init__.py  _wiki_bg_runner.py  models.py  orchestrator.py  wiki_background.py
libs/core/: __init__.py  entities.py  hashing.py  paths.py  projects_config.py  secrets.py  version.py
libs/dotcontext/: __init__.py  writer.py
libs/embeddings/: __init__.py  adapter.py  bge_m3.py  chunker.py  qdrant_store.py  service.py
libs/eval/: __init__.py  cost_guard.py  dataset_schema.py  history.py  metrics.py  ragas_adapter.py  report.py  runner.py
libs/gitintel/: extractor.py  history.py  models.py  tag_watcher.py
libs/graph/: __init__.py  builder.py  centrality.py
libs/impact/: analyzer.py  hotspots.py
libs/llm/: __init__.py  anthropic_client.py  base.py  cost.py  errors.py  models.py  ollama_client.py  openai_client.py  registry.py
libs/mcp_ops/: __init__.py  claude_cli.py  doctor.py  install.py  launchd.py  uninstall.py
libs/memory/: __init__.py  models.py  store.py
libs/obsidian/: __init__.py  models.py  publisher.py  templates.py  wikilinks.py
libs/parsers/: __init__.py  base.py  docs_linker.py  golang.py  java.py  kotlin.py  python.py  registry.py  rust.py  swift.py  text_parsers.py  treesitter_base.py  typescript.py
libs/patterns/: __init__.py  aggregator.py  detector.py
libs/project_index/: __init__.py  index.py
libs/retrieval/: __init__.py  _stopwords.py  coverage.py  disambiguate.py  fts.py  graph_expansion.py  identifiers.py  index.py  pipeline.py  reranker.py  stemmer.py  term_dict.py  trace.py
libs/scan_history/: __init__.py  store.py
libs/scanning/: __init__.py  scanner.py
libs/status/: __init__.py  aggregator.py  budget.py  daemon_probe.py  health.py  models.py  registry_audit.py  registry_prune.py  value_metrics.py
libs/storage/: __init__.py  encryption.py  sqlite_cache.py
scripts/: bench_embedder.py  bench_scan.py  ctx  eval-report.sh  multiproject-eval-report.sh  phase-3a-dogfood.sh  phase-3b-dogfood.sh  phase-3c1-dogfood.sh  polyglot-eval-report.sh  real_project_eval_report.py
skills/: README.md
specs/: README.md
tests/: conftest.py
(+397 files in other folders)
