[project]
name = "lv-dcp"
version = "0.8.0"
description = "LV_DCP — Developer Context Platform. Local-first engineering memory for macOS."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Vitaly Lukin", email = "noreply@lukinvit.tech" },
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "structlog>=24.1",
    "rich>=13.7",
    "pyyaml>=6.0",
    "markdown-it-py>=3.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "qdrant-client>=1.9",
    "mcp>=1.12,<2",
    "watchdog>=4.0,<5",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "openai>=1.50",
    "anthropic>=0.40",
    "tiktoken>=0.7",
    "pymorphy3>=2.0",
    "pymorphy3-dicts-ru>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "pre-commit>=3.7",
    "httpx>=0.27",
]

[project.scripts]
ctx = "apps.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libs", "apps"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps", "libs", "tests", "scripts"]
extend-exclude = ["tests/eval/fixtures"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",              # isort
    "UP",             # pyupgrade
    "B",              # bugbear
    "SIM",            # simplify
    "RUF",            # ruff-specific
    "PL",             # pylint subset
    "PTH",            # pathlib
    "ASYNC",          # async correctness
    "S",              # bandit (security)
]
ignore = [
    "E501",   # line length handled by formatter
    "S101",   # assert is fine in tests
    "PLR2004",# magic values are fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PL", "RUF001"]
"libs/retrieval/stemmer.py" = ["RUF001"]
"libs/retrieval/term_dict.py" = ["RUF001"]
"libs/status/value_metrics.py" = ["S608"]
"libs/wiki/pack_enrichment.py" = ["RUF001"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
exclude = ["tests/eval/fixtures/"]

[[tool.mypy.overrides]]
module = ["watchdog.*"]
ignore_missing_imports = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["pymorphy3"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apps.agent.daemon", "tests.integration.test_ctx_watch"]
disallow_untyped_calls = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
norecursedirs = ["tests/eval/fixtures"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m", "not requires_claude_cli",
]
markers = [
    "eval: retrieval evaluation harness tests",
    "slow: long-running tests",
    "llm: tests that call a real LLM (skipped by default)",
    "requires_claude_cli: integration tests that require the `claude` binary on PATH (manual run)",
]
